# F1P10Game

./: README.md  pyproject.toml
data/: circuits.json  players.json
f1-p10-game/: circuit.py  req.http
f1p10game/: circuit.py  config.ini  driver.py  main.py  players.py  run.sh  ui_methods.py  ui_updaters.py
f1p10game/data/: aplayers.json  circuits.json  drivers.json  players copy.json  players.json  points_tables.json  results.json
f1p10game/logic/: actions.py  helpers.py  ui_logic.py
f1p10game/main/: circuit.py  driver.py  players.py  types.py
f1p10game/mix/: circuit.py  config.py  driver.py  players.py  types.py
f1p10game/results/: results.py  results_point_table.py  types.py
f1p10game/uis/: types.py  ui_builder.py  ui_helpers.py  ui_initializers.py
