[tool.poetry]
name = "f1p10game"
version = "0.5.3"
description = ""
authors = ["Kamil Democko <kamil.democko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
nicegui = "^1.4.17"
pydantic = "^2.6.4"
arrow = "^1.3.0"
icecream = "^2.1.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
